--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -59,12 +59,16 @@
                                             <mask key="constraints">
                                                 <exclude reference="MsW-3a-nt8"/>
                                                 <exclude reference="aV3-Ju-jnQ"/>
+                                                <exclude reference="QWd-EH-BZn"/>
+                                                <exclude reference="gbQ-hU-iiP"/>
                                             </mask>
                                         </variation>
                                         <variation key="heightClass=regular-widthClass=compact">
                                             <mask key="constraints">
                                                 <include reference="MsW-3a-nt8"/>
                                                 <include reference="aV3-Ju-jnQ"/>
+                                                <include reference="QWd-EH-BZn"/>
+                                                <include reference="gbQ-hU-iiP"/>
                                             </mask>
                                         </variation>
                                     </view>
@@ -307,10 +311,10 @@
                                                                         <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                                                                         <constraints>
                                                                             <constraint firstAttribute="width" constant="150" id="D8g-Mu-zyM">
-                                                                                <variation key="heightClass=regular-widthClass=compact" constant="164"/>
+                                                                                <variation key="heightClass=regular-widthClass=compact" constant="212"/>
                                                                             </constraint>
                                                                             <constraint firstAttribute="height" constant="180" id="hrZ-6g-WON">
-                                                                                <variation key="heightClass=regular-widthClass=compact" constant="186"/>
+                                                                                <variation key="heightClass=regular-widthClass=compact" constant="214"/>
                                                                             </constraint>
                                                                         </constraints>
                                                                         <variation key="default">
@@ -333,7 +337,7 @@
                                                                         <variation key="heightClass=regular-widthClass=compact" constant="0.0"/>
                                                                     </constraint>
                                                                     <constraint firstItem="gwS-7u-Nwi" firstAttribute="top" secondItem="IIY-59-PZc" secondAttribute="bottom" constant="22" id="I5Y-VH-6eW">
-                                                                        <variation key="heightClass=regular-widthClass=compact" constant="24"/>
+                                                                        <variation key="heightClass=regular-widthClass=compact" constant="15"/>
                                                                     </constraint>
                                                                     <constraint firstAttribute="centerX" secondItem="IIY-59-PZc" secondAttribute="centerX" id="LcX-sZ-Gcf"/>
                                                                     <constraint firstAttribute="centerX" secondItem="gwS-7u-Nwi" secondAttribute="centerX" id="Lsn-ht-qZ7"/>
@@ -373,7 +377,9 @@
                                                         <constraints>
                                                             <constraint firstItem="Lsu-cu-crd" firstAttribute="leading" secondItem="UD3-0T-O21" secondAttribute="leading" id="0dZ-HB-dYH"/>
                                                             <constraint firstAttribute="trailing" secondItem="Lsu-cu-crd" secondAttribute="trailing" id="HIl-uF-LGN"/>
-                                                            <constraint firstAttribute="centerY" secondItem="Lsu-cu-crd" secondAttribute="centerY" id="bYC-Lr-TRP"/>
+                                                            <constraint firstAttribute="centerY" secondItem="Lsu-cu-crd" secondAttribute="centerY" id="bYC-Lr-TRP">
+                                                                <variation key="heightClass=regular-widthClass=compact" constant="22"/>
+                                                            </constraint>
                                                         </constraints>
                                                         <variation key="default">
                                                             <mask key="subviews">
@@ -3481,7 +3487,7 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
     </scenes>
     <resources>
         <image name="cancel" width="18" height="18"/>
-        <image name="info-logo" width="165" height="186"/>
+        <image name="info-logo" width="212" height="214"/>
         <image name="onboarding_02" width="192" height="322"/>
         <image name="onboarding_03" width="192" height="322"/>
         <image name="onboarding_04" width="320" height="256"/>
