--- a/The Math/Base.lproj/Main.storyboard
+++ b/The Math/Base.lproj/Main.storyboard
@@ -1994,14 +1994,64 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                 <color key="textColor" red="1" green="1" blue="1" alpha="0.59999999999999998" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Spill the beans" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v4c-Lx-DjL">
-                                                <rect key="frame" x="136" y="60" width="129" height="26"/>
-                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="19"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                <nil key="highlightedColor"/>
-                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RvV-eo-xfy">
+                                                <rect key="frame" x="0.0" y="328" width="400" height="422"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pvZ-k1-yWH">
+                                                        <rect key="frame" x="0.0" y="0.0" width="400" height="1"/>
+                                                        <color key="backgroundColor" white="1" alpha="0.29999999999999999" colorSpace="calibratedWhite"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="1" id="Os8-QC-wlX"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Add a note..." translatesAutoresizingMaskIntoConstraints="NO" id="jDb-wj-8uM">
+                                                        <rect key="frame" x="14" y="15" width="372" height="407"/>
+                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
+                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                        <connections>
+                                                            <outlet property="delegate" destination="fTm-Vk-pUw" id="NYE-Bd-6pj"/>
+                                                        </connections>
+                                                    </textView>
+                                                </subviews>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstItem="jDb-wj-8uM" firstAttribute="top" secondItem="RvV-eo-xfy" secondAttribute="top" constant="15" id="KaZ-ek-kqT">
+                                                        <variation key="heightClass=compact" constant="10"/>
+                                                    </constraint>
+                                                    <constraint firstAttribute="trailing" secondItem="jDb-wj-8uM" secondAttribute="trailing" constant="14" id="Mph-Fd-Dd9">
+                                                        <variation key="heightClass=compact" constant="16"/>
+                                                    </constraint>
+                                                    <constraint firstItem="jDb-wj-8uM" firstAttribute="leading" secondItem="RvV-eo-xfy" secondAttribute="leading" constant="14" id="UYx-Uc-g7g">
+                                                        <variation key="heightClass=compact" constant="16"/>
+                                                    </constraint>
+                                                    <constraint firstAttribute="trailing" secondItem="pvZ-k1-yWH" secondAttribute="trailing" id="VaI-oB-GSY"/>
+                                                    <constraint firstItem="pvZ-k1-yWH" firstAttribute="top" secondItem="RvV-eo-xfy" secondAttribute="top" id="ZUL-Nt-yq9"/>
+                                                    <constraint firstAttribute="bottom" secondItem="jDb-wj-8uM" secondAttribute="bottom" id="o7a-QB-7pb"/>
+                                                    <constraint firstItem="pvZ-k1-yWH" firstAttribute="leading" secondItem="RvV-eo-xfy" secondAttribute="leading" id="qaC-cA-XCP"/>
+                                                </constraints>
+                                            </view>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ORY-cW-RfJ">
+                                                <rect key="frame" x="0.0" y="0.0" width="50" height="56"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="50" id="93y-h4-7Cq"/>
+                                                    <constraint firstAttribute="height" constant="56" id="r0v-8V-PY1">
+                                                        <variation key="heightClass=compact" constant="62"/>
+                                                    </constraint>
+                                                </constraints>
+                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <state key="normal" image="cancel">
+                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                                </state>
+                                                <connections>
+                                                    <action selector="dismissButtonTapped:" destination="fTm-Vk-pUw" eventType="touchUpInside" id="6nh-l7-iFF"/>
+                                                </connections>
+                                            </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="sHr-74-r9g" userLabel="Category Container View">
-                                                <rect key="frame" x="6" y="100" width="388" height="228"/>
+                                                <rect key="frame" x="6" y="80" width="388" height="228"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kAE-Sy-OpA" customClass="LoveCategoryView" customModule="HowAmIDoing" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="97" height="109"/>
@@ -2446,82 +2496,20 @@ Choose from a few broad categories to start. Soon you'll be able to track custom
                                                     </mask>
                                                 </variation>
                                             </view>
-                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RvV-eo-xfy">
-                                                <rect key="frame" x="0.0" y="348" width="400" height="402"/>
-                                                <subviews>
-                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="pvZ-k1-yWH">
-                                                        <rect key="frame" x="0.0" y="0.0" width="400" height="1"/>
-                                                        <color key="backgroundColor" white="1" alpha="0.29999999999999999" colorSpace="calibratedWhite"/>
-                                                        <constraints>
-                                                            <constraint firstAttribute="height" constant="1" id="Os8-QC-wlX"/>
-                                                        </constraints>
-                                                    </view>
-                                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Add a note..." translatesAutoresizingMaskIntoConstraints="NO" id="jDb-wj-8uM">
-                                                        <rect key="frame" x="14" y="15" width="372" height="387"/>
-                                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="19"/>
-                                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                        <connections>
-                                                            <outlet property="delegate" destination="fTm-Vk-pUw" id="NYE-Bd-6pj"/>
-                                                        </connections>
-                                                    </textView>
-                                                </subviews>
-                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                <constraints>
-                                                    <constraint firstItem="jDb-wj-8uM" firstAttribute="top" secondItem="RvV-eo-xfy" secondAttribute="top" constant="15" id="KaZ-ek-kqT">
-                                                        <variation key="heightClass=compact" constant="10"/>
-                                                    </constraint>
-                                                    <constraint firstAttribute="trailing" secondItem="jDb-wj-8uM" secondAttribute="trailing" constant="14" id="Mph-Fd-Dd9">
-                                                        <variation key="heightClass=compact" constant="16"/>
-                                                    </constraint>
-                                                    <constraint firstItem="jDb-wj-8uM" firstAttribute="leading" secondItem="RvV-eo-xfy" secondAttribute="leading" constant="14" id="UYx-Uc-g7g">
-                                                        <variation key="heightClass=compact" constant="16"/>
-                                                    </constraint>
-                                                    <constraint firstAttribute="trailing" secondItem="pvZ-k1-yWH" secondAttribute="trailing" id="VaI-oB-GSY"/>
-                                                    <constraint firstItem="pvZ-k1-yWH" firstAttribute="top" secondItem="RvV-eo-xfy" secondAttribute="top" id="ZUL-Nt-yq9"/>
-                                                    <constraint firstAttribute="bottom" secondItem="jDb-wj-8uM" secondAttribute="bottom" id="o7a-QB-7pb"/>
-                                                    <constraint firstItem="pvZ-k1-yWH" firstAttribute="leading" secondItem="RvV-eo-xfy" secondAttribute="leading" id="qaC-cA-XCP"/>
-                                                </constraints>
-                                            </view>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ORY-cW-RfJ">
-                                                <rect key="frame" x="0.0" y="0.0" width="50" height="56"/>
-                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                <constraints>
-                                                    <constraint firstAttribute="width" constant="50" id="93y-h4-7Cq"/>
-                                                    <constraint firstAttribute="height" constant="56" id="r0v-8V-PY1">
-                                                        <variation key="heightClass=compact" constant="62"/>
-                                                    </constraint>
-                                                </constraints>
-                                                <color key="tintColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                <state key="normal" image="cancel">
-                                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                                </state>
-                                                <connections>
-                                                    <action selector="dismissButtonTapped:" destination="fTm-Vk-pUw" eventType="touchUpInside" id="6nh-l7-iFF"/>
-                                                </connections>
-                                            </button>
                                         </subviews>
                                         <color key="backgroundColor" red="0.12981376262626265" green="0.12981376262626265" blue="0.12981376262626265" alpha="0.20000000000000001" colorSpace="calibratedRGB"/>
                                         <constraints>
                                             <constraint firstItem="RvV-eo-xfy" firstAttribute="top" secondItem="sHr-74-r9g" secondAttribute="bottom" constant="20" id="KA0-ng-iRi">
                                                 <variation key="heightClass=compact" constant="31"/>
                                             </constraint>
-                                            <constraint firstAttribute="centerX" secondItem="v4c-Lx-DjL" secondAttribute="centerX" id="OVC-kg-bYW"/>
+                                            <constraint firstItem="sHr-74-r9g" firstAttribute="top" secondItem="kVq-FT-xpZ" secondAttribute="bottom" constant="40" id="RGM-YN-i55"/>
                                             <constraint firstAttribute="centerX" secondItem="kVq-FT-xpZ" secondAttribute="centerX" id="WUC-Nz-TM1"/>
                                             <constraint firstItem="ORY-cW-RfJ" firstAttribute="top" secondItem="HRk-PQ-j7O" secondAttribute="top" id="cho-5Z-kjW"/>
                                             <constraint firstItem="kVq-FT-xpZ" firstAttribute="top" secondItem="HRk-PQ-j7O" secondAttribute="top" constant="20" id="dhj-t7-GTX"/>
                                             <constraint firstAttribute="height" constant="750" id="eeb-k5-oq8"/>
-                                            <constraint firstItem="v4c-Lx-DjL" firstAttribute="top" secondItem="kVq-FT-xpZ" secondAttribute="bottom" constant="20" id="fXe-83-uAX">
-                                                <variation key="heightClass=compact" constant="24"/>
-                                            </constraint>
                                             <constraint firstItem="ORY-cW-RfJ" firstAttribute="leading" secondItem="HRk-PQ-j7O" secondAttribute="leading" id="gsE-YE-hn0"/>
                                             <constraint firstItem="sHr-74-r9g" firstAttribute="leading" secondItem="HRk-PQ-j7O" secondAttribute="leading" constant="6" id="hTb-ay-hmb"/>
                                             <constraint firstAttribute="trailing" secondItem="sHr-74-r9g" secondAttribute="trailing" constant="6" id="i1l-9T-Dlp"/>
-                                            <constraint firstItem="sHr-74-r9g" firstAttribute="top" secondItem="v4c-Lx-DjL" secondAttribute="bottom" constant="14" id="oM5-vO-md4">
-                                                <variation key="heightClass=compact" constant="24"/>
-                                            </constraint>
                                             <constraint firstAttribute="width" constant="400" id="sm3-sd-WZg"/>
                                             <constraint firstAttribute="trailing" secondItem="RvV-eo-xfy" secondAttribute="trailing" id="uqB-Th-KgO"/>
                                             <constraint firstItem="RvV-eo-xfy" firstAttribute="leading" secondItem="HRk-PQ-j7O" secondAttribute="leading" id="usY-H6-goT"/>
